<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edusrmn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="350dp"
        android:layout_marginRight="50dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_edtxt"
        android:drawableStart="@drawable/email"
        android:focusable="true"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/hintusername"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/edpsswd"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="415dp"
        android:layout_marginRight="50dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_edtxt"
        android:drawableStart="@drawable/pass"
        android:focusable="true"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/hintpassword"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="19sp" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="480dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/login"
        android:textSize="19sp"
        android:theme="@style/button.fill"
        android:visibility="visible"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/fpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="542dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/greenlogo"
        android:fontFamily="@font/roboto_reg"
        android:text="@string/fpass" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="650dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_reg"
        android:text="@string/orApp"/>

    <ImageView
        android:id="@+id/fcbk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="675dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:src="@drawable/facebookrdf"/>

</RelativeLayout>